* Fri Aug 30 2019 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
- Update asset conventions to SIMP 6.4.0-0 / skeleton 3.0.0
- FIXME: something else you did