@@ -68,7 +68,7 @@ before_install:
 
 env:
   global:
-    - 'FORGE_USER_AGENT="TravisCI-ForgeReleng-Script/0.3.0 (Purpose/forge-ops-for-${TRAVIS_REPO_SLUG})"'
+    - 'FORGE_USER_AGENT="TravisCI-ForgeReleng-Script/0.3.3 (Purpose/forge-ops-for-${TRAVIS_REPO_SLUG})"'
 
 stages:
   - name: 'validate tokens'
@@ -163,5 +163,5 @@ jobs:
       script:
       - 'echo; echo "===== PUPPETFORGE_API_TOKEN validation"; echo "  (TRAVIS_SECURE_ENV_VARS=$TRAVIS_SECURE_ENV_VARS)"; echo'
       - 'curl -sS --fail -A "$FORGE_USER_AGENT"
-         -H "Authorization: Bearer ${PUPPETFORGE_API_TOKEN}"
+         -H "Authorization: Bearer ${PUPPETFORGE_API_TOKEN:-default_content_to_cause_401_response}"
          https://forgeapi.puppet.com/v3/users > /dev/null'
